# magictravel_plataforma

./: .gitignore  ADMIN_STRUCTURE.md  COMMISSION_SYSTEM.md  README.md  dev.sh  pyproject.toml  tests.sh
.cursor/: API_ENDPOINTS.md  AUTHENTICATION.md  FRONTEND_GUIDE.md  README.md  TESTING.md
docs/: DATABASE_STRUCTURE.md  MARIA_API_INTEGRATION.md  OVERVIEW.md  PRODUCT_FLOW.md  SEED_DATABASE.md
migrations/models/: 0_20251029200916_init.py  0_20251029214848_init.py  0_20251110205329_init.py  0_20251125195830_init.py  0_20251125203452_init.py  1_20251110205437_add_product_code_park_code_to_table_product.py  1_20251113212242_None.py
scripts/: seed_db.py
src/: application.py  authentication.py  configuration.py  constants.py  models.py  seed.py  utils.py
src/dtos/: cart.py  customer.py  order.py  product.py  seller.py  store.py
src/integrations/maria_api/: dto.py  maria.py
src/routes/: admin_seller.py  cart.py  customer.py  maria.py  order.py  pages.py  product.py  seller.py  store.py
static/: README.md
static/css/: admin.css  base.css
static/js/: admin-auth.js  api.js  auth-modal.js  cart.js
templates/: base.html
templates/admin_seller/: base_seller.html  customers.html  dashboard.html  login.html  orders.html  products.html  settings.html
templates/pages/: checkout.html  index.html  order_details.html  park.html
tests/: conftest.py
tests/api/: test_cart.py  test_customer.py  test_order.py  test_product.py  test_seller.py  test_store.py
tests/integration/: test_maria_api.py
tests/system/: test_create_store.py  test_customer.py
